<resources>
    <string name="app_name">DicodingStory</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="avatar_login">Avatar Login</string>
    <string name="button_back">Tombol Back</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deskripsi_story">Bangkit adalah kesempurnaan dalam pembelajaran indonesia emas 2045</string>
    <string name="name_story">Muhammad Syafiq Zhalifunnas</string>
    <string name="input_deskripsi">Masukkan deskripsi</string>
    <string name="choose_galery">Pilih dari Galeri</string>
    <string name="open_cam">Buka Kamera</string>
    <string name="upload_story">Unggah Story</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="name">Name :</string>
    <string name="gambar_deskripsi">Gambar Deskripsi</string>
    <string name="image_upload">Image Upload</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="tambahkan_deskripsi">Tambahkan Deskripsi</string>
    <string name="profile">profile</string>
    <string name="logout">Logout</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="password_error">Password Kurang Dari 8 Karakter</string>
    <string name="name_error">Nama Harus Diisi</string>
    <string name="email_error">Email tidak Valid</string>
    <string name="confirm_password_error">Password Tidak Sesuai</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="button_upload">Button Upload</string>
    <string name="account">Account</string>
</resources>