<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignUpActivity"
    android:background="@color/yellow">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80000000"
            android:clickable="true"
            android:elevation="100dp"
            android:focusable="true"
            android:visibility="invisible">

            <ProgressBar
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_centerInParent="true"
                android:elevation="100dp"
                android:indeterminate="true" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="30dp"
            android:paddingVertical="40dp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="35dp"
                android:src="@drawable/btn_back"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bg_login" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btnMasuk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:text="@string/masuk"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btnDaftar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/bg_btn"
                        android:text="@string/daftar"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.example.dicodingstory.utils.CustomEditText
                android:id="@+id/etName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/name"
                android:inputType="text"
                android:minHeight="48dp"
                android:paddingVertical="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <com.example.dicodingstory.utils.CustomEditText
                android:id="@+id/etEmail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingVertical="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <com.example.dicodingstory.utils.CustomEditText
                android:id="@+id/etPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/kata_sandi"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingVertical="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <com.example.dicodingstory.utils.CustomEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/konfirmasi_kata_sandi"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingVertical="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/daftar"
                android:textColor="@color/white"
                android:background="@drawable/bg_btn_yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
